--- a/frontend/src/match/match.css
+++ b/frontend/src/match/match.css
@@ -1,11 +1,23 @@
-.matchbox{
+.matchbox_win{
     width: 75% !important;
     height: 160px;
     margin:0 auto !important;
     margin-bottom: 5px !important;
     border-radius: 10px !important;
+    background-color: skyblue !important;
     
 }
+
+.matchbox_loss{
+    width: 75% !important;
+    height: 160px;
+    margin:0 auto !important;
+    margin-bottom: 5px !important;
+    border-radius: 10px !important;
+    background-color: pink !important;
+    
+}
+
 
 
 .rank_type{
